-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 15, 16
-
Component/s: hotspot
-
b30
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8248592 | 16 | Markus Grönlund | P3 | Resolved | Fixed | b04 |
| JDK-8250126 | 15.0.2 | Markus Grönlund | P3 | Resolved | Fixed | b01 |
| JDK-8250425 | 15.0.1 | Markus Grönlund | P3 | Resolved | Fixed | b03 |
Before
With
This has caused the access time to become a function of the number of buffers, indirectly becoming a function of the number of concurrent threads.
On systems with a high number of parallel threads, this becomes problematic.
We should address both of these aspects by using two mspaces instead of a single global JfrCheckpointMspace. One mspace is to be specialized for threads and one is to be specialized for the global access. This is similar to the layout of JfrStorage.
- backported by
-
JDK-8248592 Poor scalability in JfrCheckpointManager when using many threads after JDK-8242088
-
- Resolved
-
-
JDK-8250126 Poor scalability in JfrCheckpointManager when using many threads after JDK-8242088
-
- Resolved
-
-
JDK-8250425 Poor scalability in JfrCheckpointManager when using many threads after JDK-8242088
-
- Resolved
-
- relates to
-
JDK-8242088 Replace mutually exclusive lists with concurrent alternatives
-
- Resolved
-
-
JDK-8234595 JfrBuffer::reinitialize failed "assert(!lease()) failed: invariant"
-
- Closed
-
-
JDK-8247965 Two JFR tests failing in Loom repo
-
- Closed
-