8248485: Poor scalability in JfrCheckpointManager when using many threads after JDK-8242008

Reviewed-by: egahlin